--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-src/firebase/config.js
+# src/firebase/config.js
+
+.env
 
 # dependencies
 /node_modules
