--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "classnames": "^2.2.6",
     "firebase": "^5.8.2",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
@@ -13,6 +14,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
+    "react-social-icons": "^4.1.0",
     "redux": "^4.0.1"
   },
   "scripts": {
