--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.6",
+    "connected-react-router": "^6.3.2",
     "firebase": "^5.8.2",
+    "history": "^4.9.0",
+    "notistack": "^0.6.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-images-upload": "^1.2.6",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
