--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-images-upload": "^1.2.6",
+    "react-loader-spinner": "^2.3.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "react-social-icons": "^4.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +44,7 @@
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "prettier": "^1.16.4",
-    "prettier-eslint": "^8.8.2"
+    "prettier-eslint": "^8.8.2",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
