--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "connected-react-router": "^6.3.2",
     "firebase": "^5.8.2",
     "history": "^4.9.0",
+    "js-sha256": "^0.9.0",
     "notistack": "^0.6.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-grid-gallery": "^0.5.4",
     "react-images-upload": "^1.2.6",
     "react-loader-spinner": "^2.3.0",
     "react-redux": "^6.0.0",
