--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reacttest",
+  "name": "jaspy-phostore",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,7 +23,8 @@
     "react-scripts": "^2.1.5",
     "react-social-icons": "^4.1.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,7 +47,6 @@
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "prettier": "^1.16.4",
-    "prettier-eslint": "^8.8.2",
-    "redux-devtools-extension": "^2.13.8"
+    "prettier-eslint": "^8.8.2"
   }
 }
