--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "react-grid-gallery": "^0.5.4",
     "react-images-upload": "^1.2.6",
     "react-loader-spinner": "^2.3.0",
+    "react-loading-overlay": "^1.0.1",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "react-social-icons": "^4.1.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
